# prithvi-jg

./: .gitignore  Prithvi_100M_config.yaml  Prithvi_run_inference.py  image_formatting.py  image_plotting.py  image_retrieval.py  local_runner.sh  pyproject.toml  runner.sh
.history/: image_retrieval_20240120123147.py  image_retrieval_20240120123923.py  image_retrieval_20240120123925.py  image_retrieval_20240120123926.py  image_retrieval_20240120123929.py  image_retrieval_20240120123931.py  image_retrieval_20240120123932.py  image_retrieval_20240120123933.py  image_retrieval_20240120123936.py  image_retrieval_20240120123939.py  image_retrieval_20240120124455.py  image_retrieval_20240120124459.py  image_retrieval_20240120124501.py  image_retrieval_20240120125024.py  image_retrieval_20240120125403.py  image_retrieval_20240120125406.py  image_retrieval_20240120125731.py  image_retrieval_20240120125733.py  image_retrieval_20240120125734.py  image_retrieval_20240120125748.py  image_retrieval_20240120125749.py  image_retrieval_20240120125750.py  image_retrieval_20240120125759.py  image_retrieval_20240120130508.py  image_retrieval_20240120130509.py  image_retrieval_20240120130718.py  image_retrieval_20240120130723.py  image_retrieval_20240120130809.py  image_retrieval_20240120130810.py  image_retrieval_20240120130837.py  image_retrieval_20240120130839.py  image_retrieval_20240120130840.py  image_retrieval_20240120130841.py  image_retrieval_20240120130842.py  image_retrieval_20240120130844.py  image_retrieval_20240120130845.py  image_retrieval_20240120131017.py  (+41 more)
(+12 files in other folders)
