[tool.poetry]
name = "prithvi-jg"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pystac-client = "^0.7.5"
odc-stac = "^0.3.8"
pillow = "^10.2.0"
matplotlib = "^3.8.2"
rioxarray = "^0.15.0"
jinja2 = "^3.1.3"
dask = "^2024.1.0"
geopandas = "^0.14.2"
torch = "^2.1.2"
timm = "^0.9.12"
einops = "^0.7.0"
gradio = "^4.15.0"
ipywidgets = "^8.1.1"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
